--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "ext": "^1.7.0",
     "gray-matter": "^4.0.3",
     "next": "14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "eslint": "^8",
