--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "ext": "^1.7.0",
+    "framer-motion": "^11.3.2",
     "gray-matter": "^4.0.3",
     "next": "14.2.5",
     "react": "^18",
