--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
