--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "ext": "^1.7.0",
     "framer-motion": "^11.3.2",
@@ -17,8 +18,10 @@
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5",
     "react-use": "^17.5.0"
   },
   "devDependencies": {
