--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "ext": "^1.7.0",
+    "flag-icon-css": "^4.1.7",
     "framer-motion": "^11.3.2",
     "gray-matter": "^4.0.3",
     "next": "14.2.5",
@@ -20,7 +21,9 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
+    "react-telephone-input": "^5.0.0",
     "react-toastify": "^10.0.5",
     "react-use": "^17.5.0"
   },
