--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^9.0.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
+    "react-shimmer": "^3.2.0",
     "react-telephone-input": "^5.0.0",
     "react-toastify": "^10.0.5",
     "react-use": "^17.5.0"
