--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "ext": "^1.7.0",
@@ -22,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-phone-input-2": "^2.15.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
     "react-shimmer": "^3.2.0",
     "react-telephone-input": "^5.0.0",
